# incontext

./: TODO.md  pyproject.toml
incontext/: __init__.py  agents.py  auth.py  contexts.py  conversations.py  db.py  lists.py  schema.sql
incontext/static/: styles.css
incontext/templates/: base.html
incontext/templates/agents/: index.html  new.html  view.html
incontext/templates/contexts/: edit.html  index.html  new.html  new_agent.html  new_list.html  update.html  view.html
incontext/templates/conversations/: create.html  edit.html  index.html  new.html  update.html  view.html
incontext/templates/lists/: edit.html  index.html  new_tethered.html  view.html
incontext/templates/lists/items/: edit.html
tests/: conftest.py  data.sql  test_agents.py  test_contexts.py  test_conversations.py  test_db.py  test_lists.py  test_tethered_lists.py
