[project]
name = "incontext"
version = "0.0.10"
description = "incontext but it's contexts with  masters, lists, and agents."
dependencies = [
	"flask",
	"pytest",
    "coverage",
	"gunicorn",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["incontext"]
