[project]
name = "incontext"
version = "0.0.10"
description = "Build and manage contexts for your LLM conversations."
dependencies = [
	"flask",
	"pytest",
    "coverage",
	"gunicorn",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["incontext"]
