[project]
name = "incontext"
version = "0.0.11"
description = "Curate contexts and have conversations with LLMs."
dependencies = [
	"flask",
    "openai",
	"anthropic",
	"google-genai",
	"pytest",
    "coverage",
	"gunicorn",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["incontext"]
